# image-object-slicer

./: Pipfile  README.md  requirements.txt  setup.cfg  setup.py
image_object_slicer/: AnnotationParser.py  COCOParser.py  CVATImagesParser.py  LabelMeParser.py  MultipleFileAnnotationParser.py  PascalVOCParser.py  __init__.py
image_slicer/: __init__.py
pascalvoc_to_image/: __init__.py
