[metadata]
name = pascalvoc_to_image
version = attr: pascalvoc_to_image.__version__
url = https://www.github.com/natanjunges/pascalvoc-to-image
author = Natan Junges
author_email = natanajunges@gmail.com
license = GNU GPLv3+
license_files = LICENSE
description = Tool to cut objects from bounding boxes in PascalVOC XML files.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
scripts = bin/pascalvoc-to-image
install_requires = pillow; tqdm
