[metadata]
name = image_slicer
version = attr: image_slicer.__version__
url = https://www.github.com/natanjunges/image-slicer
author = Natan Junges
author_email = natanajunges@gmail.com
license = GNU GPLv3+
license_files = LICENSE
description = Slice images using annotation files.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
scripts = bin/image-slicer
install_requires = pillow; tqdm
